# Lb3_FSM_MS

./: .gitignore  CMakeLists.txt
include/: mainwindow.h  moorefsm.h
src/: mainwindow.cpp
ui/: mainwindow.ui
